@@ -1,5 +1,7 @@
 2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/about/thanks.html (href): add Matthias Neeracher.
+
 	* scripts/format-page.py (browser_language): clarify 
 
 2005-05-04  Jan Nieuwenhuizen  <janneke@gnu.org>
